<resources>
    <string name="app_name">TimeControlApp</string>
    <string name="btnReloj">Reloj</string>
    <string name="btnAlarma">Alarmas</string>
    <string name="btnCronometro">Cronometro</string>

    <string name="tlReloj">Reloj</string>
    <string name="tlAlarma">Alarmas</string>
    <string name="tlCronometro">Cronometro</string>
    <string name="tlCrearAlarmas">Crear Alarmas</string>
    <string name="hora">Hora</string>
    <string name="alarma">Nueva Alarma </string>
    <string name="TituloAlarma">TituloAlarma </string>
    <string name="btnCrearAlarma">Crear Alarma </string>
    <string name="activada">Activada </string>
    <string name="errorRequerido"> error ! no hay titulo </string>


</resources>
