<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ec.edu.epn.alarmas.MenuOpciones">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="6mm"
        android:gravity="center_horizontal"
        android:textColor="#4d4c4a"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnReloj"
        android:onClick="abrirReloj"
        android:background="@color/colorBoton"
        android:textColor="@color/colorLetraBoton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAlarma"
        android:onClick="abrirAlarmas"
        android:background="@color/colorBoton"
        android:textColor="@color/colorLetraBoton"
        />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnCronometro"
        android:layout_height="wrap_content"
        android:text="@string/btnCronometro"
        android:onClick="abrirCronometr"
        android:background="@color/colorBoton"
        android:textColor="@color/colorLetraBoton"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNombreReloj"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/why_face"/>
</LinearLayout>
